fix 295. only one of these styles is still used did ctrl+shift+f for each of these styles

--- a/web-common/src/app.css
+++ b/web-common/src/app.css
@@ -147,51 +147,4 @@ body {
 a {
   @apply text-blue-500;
 }
-.stack-list > * + * {
-  margin-top: var(--gap, 1rem);
-}
 
-.stack + .stack {
-  margin-top: var(--gap, 1rem);
-}
-
-.hljs-punctuation {
-  color: #bbb;
-}
-
-.hljs-attr {
-  font-weight: 500;
-}
-
-.hljs-string,
-.hljs-number {
-  color: hsl(217, 1%, 50%);
-}
-
-.gutter-indicator {
-  width: 18px;
-  display: grid;
-  place-items: center;
-  height: 18px;
-}
-
-.draggable:active {
-  cursor: dragging;
-}
-
-.ͼ1 .cm-scroller {
-  font-family: "MD IO";
-  font-size: 13px;
-}
-
-.ͼ2 .cm-gutters {
-  background-color: transparent;
-  border-right: none;
-}
-
-.line-clamp-2 {
-  overflow: hidden;
-  display: -webkit-box;
-  -webkit-line-clamp: 2;
-  -webkit-box-orient: vertical;
-}
